tests/ui/macros/paren-or-brace-expected.rs
macro_rules! foo {
    ( $( $i:ident ),* ) => {
        $[count($i)]
        //~^ ERROR expected `(` or `{`, found `[`
        //~| ERROR
    };
}

fn main() {}
